--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Modern Portfolio Landing Page",
+      "name": "COLDVZN.Portfolio",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
